fix(utils): refactor readability for better reliability

--- a/packages/flowledger-dapp/style.css
+++ b/packages/flowledger-dapp/style.css
@@ -909,3 +909,6 @@ input:user-valid { border-color: var(--income-color); }
 
 /* Visual Tweak #954 */
 .tweak-954 { opacity: 1; }
+
+/* Visual Tweak #978 */
+.tweak-978 { opacity: 1; }
